# microservices-rag

./: .gitignore  Cargo.toml
src/: generative.rs  indexing.rs  inference.rs  main.rs  server.rs  terminal.rs
src/client/: embedder_client.rs  llm_client.rs  mod.rs  qdrant_client.rs
src/index/: id_generator.rs  mod.rs  qdrant_schema.rs
src/ingest/: mod.rs  repo_scanner.rs  rust_parser.rs
src/transform/: doc_normalizer.rs  embedder_client.rs  mod.rs
